--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="pt">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +16,7 @@
   
           <i class="fas fa-phone"></i>
   
-          <span>(41) 0000-0000</span>
+          <span>(41) 3348-0132</span>
   
           <i class="fas fa-envelope"></i>
   
@@ -26,7 +26,7 @@
   
   </div>
 
-    <a href="#" class="whatsapp-float" target="_blank">
+    <a href="https://whatsa.me/554133480132" class="whatsapp-float" target="_blank">
 
       <i class="fab fa-whatsapp"></i>
   
@@ -264,7 +264,7 @@
   
                               <i class="fas fa-phone"></i>
   
-                              <a href="tel:+0000000000">(00) 0000-0000</a>
+                              <a href="tel:+0000000000">(41) 3348-0132</a>
   
                           </li>
   
@@ -333,7 +333,7 @@
                 <h4>Contato</h4>
                 <p>
                     <i class="fas fa-phone"></i>
-                    (41) 0000-0000
+                    (41) 3348-0132
                 </p>
                 <p>
                     <i class="fas fa-envelope"></i>
@@ -358,8 +358,8 @@
             
             <div class="footer-legal">
                 <h4>Informações Legais</h4>
-                <p>CNPJ: 00.000.000/0001-00</p>
-                <p>&copy; 2023 Villaggio Portas. Todos os direitos reservados.</p>
+                <p>CNPJ: 15.578.582/0001-65</p>
+                <p>&copy; 2024 Villaggio Portas. Todos os direitos reservados.</p>
             </div>
         </div>
     </div>
