--- a/index.html
+++ b/index.html
@@ -344,13 +344,13 @@
             <div class="footer-social">
                 <h4>Redes Sociais</h4>
                 <div>
-                    <a href="#">
+                    <a href="https://www.instagram.com/villaggioportas/">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="#">
+                    <a href="https://www.facebook.com/villaggioportas">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="#">
+                    <a href="https://whatsa.me/554133480132">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
