--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
@@ -83,7 +84,7 @@
       </a>
     </div>
 
-    <div class="container">
+    <div class="container" id="produtos">
       <div class="nav">
         <button class="category-btn active" data-category="internas">Portas Internas</button>
         <button class="category-btn" data-category="entrada">Portas Externas</button>
