--- a/almofadadamista.html
+++ b/almofadadamista.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>
-   Villaggio Portas - Porta de Tauari
+    Villaggio Portas - Porta Almofadada Mista
   </title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="./assets/style.css">
@@ -30,7 +30,7 @@
     
     </div>
   
-   <a href="https://whatsa.me/554133480132/?t=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" class="whatsapp-float" target="_blank">
+    <a href="https://whatsa.me/554133480132/?t=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
   
@@ -51,17 +51,17 @@
 
     <div class="container-produto">
         <div class="main-image">
-            <img alt="Porta Branca Acabada" src="./assets/imgs/produtos/tauari.jpg">
+            <img alt="Porta Branca Acabada" src="./assets/imgs/produtos/almofadadamista.jpg">
         </div>
         <div class="product-details">
-            <h1>PORTA DE PINUS</h1>
+            <h1>PORTA ALMOFADADA MISTA</h1>
             <div class="info">
                 Para mais informações entre em contato conosco através do telefone
                 <strong>(41) 3348-0132</strong>
                 ou através do email:
                 <a href="#">villaggioportas@gmail.com</a>
             </div>
-           <a class="whatsapp-button" href="https://whatsa.me/554133480132/?t=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!">
+            <a class="whatsapp-button" href="https://whatsa.me/554133480132/?t=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!">
                 <i class="fab fa-whatsapp whatsapp-icon"></i> Comprar via WhatsApp
             </a>
         </div>
