--- a/dobradicadourada.html
+++ b/dobradicadourada.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>
-   Villaggio Portas - Porta de Tauari
+    Villaggio Portas - Dobradiça Dourada
   </title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="./assets/style.css">
@@ -51,10 +51,10 @@
 
     <div class="container-produto">
         <div class="main-image">
-            <img alt="Porta Branca Acabada" src="./assets/imgs/produtos/tauari.jpg">
+            <img alt="Porta Branca Acabada" src="./assets/imgs/produtos/acessorios/Dobradiça Dourada.jpg">
         </div>
         <div class="product-details">
-            <h1>PORTA DE PINUS</h1>
+            <h1>DOBRADIÇA DOURADA</h1>
             <div class="info">
                 Para mais informações entre em contato conosco através do telefone
                 <strong>(41) 3348-0132</strong>
