--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Villaggio Portas - Curitiba</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
@@ -11,7 +13,7 @@
   <body>
     <div class="header container">
 
-      <div class="header-logo"><img src="./assets/imgs/produtos/logo.png" style="width: 7.5em" alt="Villaggio Portas"></div>
+      <div class="header-logo"><a href="index.html"><img src="./assets/imgs/produtos/logo.png" style="width: 7.5em" alt="Villaggio Portas"></a></div>
   
       <div class="contact-info">
   
@@ -27,7 +29,7 @@
   
   </div>
 
-    <a href="https://whatsa.me/554133480132" class="whatsapp-float" target="_blank">
+    <a href="https://whatsa.me/554133480132/?t=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" class="whatsapp-float" target="_blank">
 
       <i class="fab fa-whatsapp"></i>
   
@@ -37,7 +39,6 @@
       <ul>
         <li><a href="#">Portas Internas</a></li>
         <li><a href="#">Portas Externas</a></li>
-        <li><a href="#">Portas Sob Medida</a></li>
         <li><a href="#">Caixilhos</a></li>
         <li><a href="#">Acessórios</a></li>
       </ul>
@@ -63,16 +64,16 @@
             </p>
           </div>
         </div>
-        <div class="carousel-item" style="background-image: url('./assets/imgs/image2.jpg')">
-          <div>
-            <h1>SOLUÇÕES PERSONALIZADAS</h1>
-            <p>Encontre a porta perfeita para seu espaço</p>
-          </div>
-        </div>
-        <div class="carousel-item" style="background-image: url('./assets/imgs/image3.jpg')">
+        <div class="carousel-item" style="background-image: url('./assets/imgs/image3post.png')">
           <div>
             <h1>DESIGN E FUNCIONALIDADE</h1>
             <p>Combinando estilo e qualidade</p>
+          </div>
+        </div>
+        <div class="carousel-item" style="background-image: url('./assets/imgs/image4.png')">
+          <div>
+            <h1>PORTAS SOB MEDIDA</h1>
+            <p>Encontre a porta perfeita para seu espaço</p>
           </div>
         </div>
       </div>
