--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 
     <div class="container" id="produtos">
       <div class="nav">
-        <button class="category-btn active" data-category="internas">Portas Internas</button>
-        <button class="category-btn" data-category="entrada">Portas Externas</button>
-        <button class="category-btn" data-category="fogo">Caixilhos</button>
-        <button class="category-btn" data-category="promocoes">Acessórios</button>
+        <button class="category-btn active" data-category="internas" style="color: black;">Portas Internas</button>
+        <button class="category-btn" data-category="entrada" style="color: black;">Portas Externas</button>
+        <button class="category-btn" data-category="fogo" style="color: black;">Caixilhos</button>
+        <button class="category-btn" data-category="promocoes" style="color: black;">Acessórios</button>
       </div>
       <div class="products" id="productContainer">
         <!-- Produtos serão carregados dinamicamente via JS -->
