--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
+    <link rel="shortcut icon" type="image/png" href="./assets/imgs/favicon.png"/>
     <title>Villaggio Portas - Curitiba</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
@@ -86,15 +87,16 @@
 
     <div class="container" id="produtos">
       <div class="nav">
-        <button class="category-btn active" data-category="internas" style="color: black;">Portas Internas</button>
-        <button class="category-btn" data-category="entrada" style="color: black;">Portas Externas</button>
-        <button class="category-btn" data-category="fogo" style="color: black;">Caixilhos</button>
-        <button class="category-btn" data-category="promocoes" style="color: black;">Acessórios</button>
+        <a href="#scrolldown"><button class="category-btn active" data-category="internas" style="color: black;">Portas Internas</button></a>
+        <button class="category-btn" data-category="externas" style="color: black;">Portas Externas</button>
+        <button class="category-btn" data-category="caixilhos" style="color: black;">Caixilhos</button>
+        <button class="category-btn" data-category="acessorios" style="color: black;">Acessórios</button>
       </div>
       <div class="products" id="productContainer">
         <!-- Produtos serão carregados dinamicamente via JS -->
       </div>
     </div>
+
 
     <section id="sobre">
 
@@ -345,13 +347,13 @@
             <div class="footer-social">
                 <h4>Redes Sociais</h4>
                 <div>
-                    <a href="https://www.instagram.com/villaggioportas/">
+                    <a href="https://www.instagram.com/villaggioportas/" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://www.facebook.com/villaggioportas">
+                    <a href="https://www.facebook.com/villaggioportas" target="_blank">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="https://whatsa.me/554133480132">
+                    <a href="https://whatsa.me/554133480132" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
@@ -360,7 +362,7 @@
             <div class="footer-legal">
                 <h4>Informações Legais</h4>
                 <p>CNPJ: 15.578.582/0001-65</p>
-                <p>&copy; 2024 Villaggio Portas. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Villaggio Portas. Todos os direitos reservados.</p>
             </div>
         </div>
     </div>
