--- a/puxadorinox.html
+++ b/puxadorinox.html
@@ -3,6 +3,7 @@
  <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" type="image/png" href="./assets/imgs/favicon.png"/>
   <title>
     Villaggio Portas - Puxador Inox
   </title>
@@ -112,7 +113,7 @@
                 <div class="footer-legal">
                     <h4>Informações Legais</h4>
                     <p>CNPJ: 15.578.582/0001-65</p>
-                    <p>&copy; 2024 Villaggio Portas. Todos os direitos reservados.</p>
+                    <p>&copy; 2025 Villaggio Portas. Todos os direitos reservados.</p>
                 </div>
             </div>
         </div>
