--- a/frisada.html
+++ b/frisada.html
@@ -3,6 +3,7 @@
  <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" type="image/png" href="./assets/imgs/favicon.png"/>
   <title>
    Villaggio Portas - Porta Frisada
   </title>
@@ -55,17 +56,17 @@
                 <img src="./assets/imgs/produtos/portafrisada.jpg" alt="Porta Frisada 1">
             </div>
             <div class="thumbnail" data-image="./assets/imgs/produtos/portafrisada2.jpg">
-                <img src="./assets/imgs/produtos/Porta Frisada SP01.jpg" alt="Porta Frisada 2">
+                <img src="./assets/imgs/produtos/portafrisada2.jpg" alt="Porta Frisada 2">
             </div>
             <div class="thumbnail" data-image="./assets/imgs/produtos/portafrisada3.jpg">
-                <img src="./assets/imgs/produtos/Porta Frisada SP03.jpg" alt="Porta Frisada 3">
+                <img src="./assets/imgs/produtos/portafrisada3.jpg" alt="Porta Frisada 3">
             </div>
             <div class="thumbnail" data-image="./assets/imgs/produtos/portafrisada4.jpg">
-                <img src="./assets/imgs/produtos/Porta Frisada SP04.jpg" alt="Porta Frisada 4">
+                <img src="./assets/imgs/produtos/portafrisada4.jpg" alt="Porta Frisada 4">
             </div>
         </div>
         <div class="main-image">
-            <img alt="Porta Branca Acabada" src="./assets/imgs/produtos/portafrisada.jpg">
+            <img id="realimage" alt="Porta Branca Acabada" src="./assets/imgs/produtos/portafrisada.jpg">
         </div>
   
         <div class="product-details">
@@ -127,11 +128,57 @@
                 <div class="footer-legal">
                     <h4>Informações Legais</h4>
                     <p>CNPJ: 15.578.582/0001-65</p>
-                    <p>&copy; 2024 Villaggio Portas. Todos os direitos reservados.</p>
+                    <p>&copy; 2025 Villaggio Portas. Todos os direitos reservados.</p>
                 </div>
             </div>
         </div>
     </footer>
  </body>
+ <script>
+ document.addEventListener('DOMContentLoaded', function() {
+    // Seleciona todos os thumbnails
+    const thumbnails = document.querySelectorAll('.thumbnail');
+    
+    // Seleciona a imagem principal
+    const mainImage = document.querySelector('#realimage');
+
+    // Log para verificar se a imagem principal foi encontrada
+    console.log('Main Image:', mainImage);
+
+    // Adiciona evento de clique para cada thumbnail
+    thumbnails.forEach(thumbnail => {
+        thumbnail.addEventListener('click', function() {
+            // Log do thumbnail clicado
+            console.log('Thumbnail clicked:', this);
+
+            // Remove a classe 'active' de todos os thumbnails
+            thumbnails.forEach(t => t.classList.remove('active'));
+
+            // Adiciona a classe 'active' ao thumbnail clicado
+            this.classList.add('active');
+
+            // Obtém o caminho da imagem do atributo data-image
+            const imagePath = this.getAttribute('data-image');
+
+            // Logs para verificar o caminho da imagem
+            console.log('Image Path:', imagePath);
+            console.log('Full Image Path:', window.location.origin + imagePath);
+
+            // Atualiza a imagem principal com o caminho do data-image
+            if (mainImage) {
+                try {
+                    // Tenta usar o caminho relativo
+                    mainImage.src = imagePath;
+                    
+                    console.log('Image src set successfully');
+                } catch (error) {
+                    console.error('Error setting image src:', error);
+                }
+            }
+        });
+    });
+});
+     </script>
  <script src="./assets/main.js"></script>
+
 </html>
