--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <div class="container" id="produtos">
       <div class="nav">
-        <a href="#scrolldown"><button class="category-btn active" data-category="internas" style="color: black;">Portas Internas</button></a>
+        <button class="category-btn active" data-category="internas" style="color: black;">Portas Internas</button>
         <button class="category-btn" data-category="externas" style="color: black;">Portas Externas</button>
         <button class="category-btn" data-category="caixilhos" style="color: black;">Caixilhos</button>
         <button class="category-btn" data-category="acessorios" style="color: black;">Acessórios</button>
